--- a/app/views/current/views/slurry/farming-type-fail.html
+++ b/app/views/current/views/slurry/farming-type-fail.html
@@ -17,7 +17,7 @@
         You cannot apply for a large grant from this scheme
       </h1>
 
-      <p>This is only available to arable and horticultural farming businesses that supply the food industry.</p>
+      <p>This is only available to livestock, dairy, arable or horticultural farming businesses.</p>
 
       <!--See <a href="">the large countryside productivity grant guidance</a> for further information.-->
 
