--- a/app/views/current/views/slurry/check-answers-all.html
+++ b/app/views/current/views/slurry/check-answers-all.html
@@ -136,7 +136,7 @@
           {{ data['public-money'] | capitalize }}
         </dd>
         <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="remaining-costs">
+          <a class="govuk-link" href="public-money">
             Change<span class="govuk-visually-hidden"> public money</span>
           </a>
         </dd>
@@ -197,65 +197,6 @@
         </dd>
       </div>
       {% endif %}
-
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key govuk-!-width-one-third">
-          Abstraction licence required
-        </dt>
-        <dd class="govuk-summary-list__value">
-          {{ data['abstraction-required'] | capitalize }}
-        </dd>
-        <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="abstraction-required">
-            Change<span class="govuk-visually-hidden"> abstraction licence required</span>
-          </a>
-        </dd>
-      </div>
-      {% if data['abstraction-required'] == "yes" %}
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key govuk-!-width-one-third">
-          Abstraction licence obtained
-        </dt>
-        <dd class="govuk-summary-list__value">
-          <p class="govuk-body">{{ data['abstraction-licence'] | capitalize }}</p>
-        </dd>
-        <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="abstraction-licence">
-            Change<span class="govuk-visually-hidden"> abstraction licence obtained</span>
-          </a>
-        </dd>
-      </div>
-      {% endif %}
-      {% if data['abstraction-licence'] == "no" %}
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key govuk-!-width-one-third">
-          Abstraction licence to be granted in next six months
-        </dt>
-        <dd class="govuk-summary-list__value">
-          <p class="govuk-body">{{ data['abstraction-progress'] | capitalize }}</p>
-        </dd>
-        <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="abstraction-licence">
-            Change<span class="govuk-visually-hidden"> abstraction licence to be granted in next six months</span>
-          </a>
-        </dd>
-      </div>
-      {% endif %}
-      {% if data['abstraction-variation'] == "yes" %}
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key govuk-!-width-one-third">
-          Abstraction variation required
-        </dt>
-        <dd class="govuk-summary-list__value">
-          <p class="govuk-body">{{ data['abstraction-variation'] | capitalize }}</p>
-        </dd>
-        <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="abstraction-variation">
-            Change<span class="govuk-visually-hidden"> abstraction variation required</span>
-          </a>
-        </dd>
-      </div>
-      {% endif %}
     </dl>
 
     {% if (data['tenancy'] == "yes") and (data['tenancy-length'] == "no") %}
@@ -276,25 +217,7 @@
     </div>
     {% endif %}
 
-    {% if data['abstraction-required'] == "not sure" %}
-    <div class="govuk-inset-text">
-        You will need to check if you need an abstraction licence and secure it before you make a full application.
-    </div>
-    {% endif %}
-
-    {% if (data['abstraction-licence'] == "no") and (data['abstraction-progress'] == "not sure") %}
-    <div class="govuk-inset-text">
-        You will need to secure an abstraction licence before you make a full application.
-    </div>
-    {% endif %}
-
-    {% if (data['abstraction-licence'] == "yes") and (data['abstraction-variation'] == "yes") %}
-    <div class="govuk-inset-text">
-        You will need to secure a variation to your abstraction licence before you make a full application.
-    </div>
-    {% endif %}
-
-    <h2 class="govuk-heading-m govuk-!-margin-top-9">Project details and benefits</h2>
+    <h2 class="govuk-heading-m">Project details and benefits</h2>
 
     <dl class="govuk-summary-list">
       <div class="govuk-summary-list__row">
@@ -305,7 +228,7 @@
           {{ data['project-name'] }}
         </dd>
         <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="irrigation">
+          <a class="govuk-link" href="project">
             Change<span class="govuk-visually-hidden"> project name</span>
           </a>
         </dd>
@@ -318,197 +241,24 @@
           {{ data['project-summary'] }}
         </dd>
         <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="new-irrigation">
+          <a class="govuk-link" href="project">
             Change<span class="govuk-visually-hidden"> project summary</span>
           </a>
         </dd>
       </div>
-      {% if data['irrigation'] == "introduce" %}
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key govuk-!-width-one-third">
-          Irrigation benefits
+          New processes, techniques, or equipment
         </dt>
         <dd class="govuk-summary-list__value">
-          Introducing irrigation
+          {{ data['new-slurry'] }}
         </dd>
         <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="irrigation">
-            Change<span class="govuk-visually-hidden"> irrigation benefits</span>
+          <a class="govuk-link" href="collaboration">
+            Change<span class="govuk-visually-hidden"> other processes, techniques, or equipment</span>
           </a>
         </dd>
       </div>
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key govuk-!-width-one-third">
-          Land to be irrigated
-        </dt>
-        <dd class="govuk-summary-list__value">
-          {{ data['new-land-irrigated'] }}
-        </dd>
-        <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="new-irrigation">
-            Change<span class="govuk-visually-hidden"> land irrigated</span>
-          </a>
-        </dd>
-      </div>
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key govuk-!-width-one-third">
-          Crops to be irrigated
-        </dt>
-        <dd class="govuk-summary-list__value">
-          {{ data['new-crops-irrigated'] }}
-        </dd>
-        <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="new-irrigation">
-            Change<span class="govuk-visually-hidden"> crops to be irrigated</span>
-          </a>
-        </dd>
-      </div>
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key govuk-!-width-one-third">
-          Water source for irrigation
-        </dt>
-        <dd class="govuk-summary-list__value">
-          {{ data['new-water-source'] }}
-        </dd>
-        <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="new-irrigation">
-            Change<span class="govuk-visually-hidden"> water source</span>
-          </a>
-        </dd>
-      </div>
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key govuk-!-width-one-third">
-          Irrigation systems
-        </dt>
-        <dd class="govuk-summary-list__value">
-          {{ data['new-irrigation-systems'] }}
-        </dd>
-        <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="new-irrigation">
-            Change<span class="govuk-visually-hidden"> irrigation systems</span>
-          </a>
-        </dd>
-      </div>
-      {% endif %}
-      {% if data['irrigation'] == "improve" %}
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key govuk-!-width-one-third govuk-!-width-one-half">
-          Irrigation benefits
-        </dt>
-        <dd class="govuk-summary-list__value">
-          Increase and/or improve irrigation
-        </dd>
-        <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="irrigation">
-            Change<span class="govuk-visually-hidden"> irrigation benefits</span>
-          </a>
-        </dd>
-      </div>
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key govuk-!-width-one-third">
-          Current land irrigated
-        </dt>
-        <dd class="govuk-summary-list__value">
-          {{ data['land-irrigated'] }}
-        </dd>
-        <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="current-irrigation">
-            Change<span class="govuk-visually-hidden"> land irrigated</span>
-          </a>
-        </dd>
-      </div>
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key govuk-!-width-one-third">
-          Current crops irrigated
-        </dt>
-        <dd class="govuk-summary-list__value">
-          {{ data['crops-irrigated'] }}
-        </dd>
-        <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="current-irrigation">
-            Change<span class="govuk-visually-hidden"> crops irrigated</span>
-          </a>
-        </dd>
-      </div>
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key govuk-!-width-one-third">
-          Current water source for irrigation
-        </dt>
-        <dd class="govuk-summary-list__value">
-          {{ data['water-source'] }}
-        </dd>
-        <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="current-irrigation">
-            Change<span class="govuk-visually-hidden"> water source</span>
-          </a>
-        </dd>
-      </div>
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key govuk-!-width-one-third">
-          Current irrigation systems
-        </dt>
-        <dd class="govuk-summary-list__value">
-          {{ data['irrigation-systems'] }}
-        </dd>
-        <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="current-irrigation">
-            Change<span class="govuk-visually-hidden"> irrigation systems</span>
-          </a>
-        </dd>
-      </div>
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key govuk-!-width-one-third">
-          Proposed land to be irrigated
-        </dt>
-        <dd class="govuk-summary-list__value">
-          {{ data['improved-land-irrigated'] }}
-        </dd>
-        <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="proposed-irrigation">
-            Change<span class="govuk-visually-hidden"> land irrigated</span>
-          </a>
-        </dd>
-      </div>
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key govuk-!-width-one-third">
-          Proposed crops to be irrigated
-        </dt>
-        <dd class="govuk-summary-list__value">
-          {{ data['improved-crops-irrigated'] }}
-        </dd>
-        <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="proposed-irrigation">
-            Change<span class="govuk-visually-hidden"> crops to be irrigated</span>
-          </a>
-        </dd>
-      </div>
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key govuk-!-width-one-third">
-          Proposed water source for irrigation
-        </dt>
-        <dd class="govuk-summary-list__value">
-          {{ data['improved-water-source'] }}
-        </dd>
-        <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="proposed-irrigation">
-            Change<span class="govuk-visually-hidden"> proposed water source</span>
-          </a>
-        </dd>
-      </div>
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key govuk-!-width-one-third">
-          Proposed irrigation systems
-        </dt>
-        <dd class="govuk-summary-list__value">
-          {{ data['improved-irrigation-systems'] }}
-        </dd>
-        <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="proposed-irrigation">
-            Change<span class="govuk-visually-hidden"> proposed irrigation systems</span>
-          </a>
-        </dd>
-      </div>
-      {% endif %}
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key govuk-!-width-one-third">
           Other farms supplied with water
