--- a/app/views/current/views/water/check-answers-all.html
+++ b/app/views/current/views/water/check-answers-all.html
@@ -779,7 +779,7 @@
 
     <p class="govuk-body">By sending this you are confirming that, to the best of your knowledge, the details you are providing are correct.</p>
 
-    <form action="confirmation" method="post" novalidate>
+    <form action="../water/confirmation" method="post" novalidate>
 
       <input type="hidden" name="answers-checked" value="true">
 
