--- a/app/views/current/views/water/check-answers-check-you-can-apply.html
+++ b/app/views/current/views/water/check-answers-check-you-can-apply.html
@@ -294,7 +294,7 @@
     </div>
     {% endif %}
 
-    <form action="task-list" method="post" novalidate>
+    <form action="../water/task-list" method="post" novalidate>
 
       <input type="hidden" name="answers-checked" value="true">
 
