--- a/app/views/current/views/water/grant.html
+++ b/app/views/current/views/water/grant.html
@@ -5,7 +5,7 @@ Potential grant funding
 {% endblock %}
 
 {% block beforeContent %}
-<a class="govuk-back-link" href="project-cost">Back</a>
+<a class="govuk-back-link" href="{{ backUrl }}">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -24,7 +24,7 @@ Potential grant funding
       The project is not guaranteed to receive a grant.
     </div>
 
-    <form class="form" action="remaining-costs" method="post">
+    <form class="form" action="{{ nextUrl }}" method="post">
 
       <button class="govuk-button" data-module="govuk-button">Continue</button>
 
