--- a/app/views/current/views/water/planning-permission.html
+++ b/app/views/current/views/water/planning-permission.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block beforeContent %}
-  <a class="govuk-back-link" href="planning-required">Back</a>
+  <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -13,7 +13,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form class="form" action="../routes/planning-permission-answer" method="post">
+      <form class="form" action="{{ nextUrl }}" method="post">
 
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
