--- a/app/views/current/views/water/project-start.html
+++ b/app/views/current/views/water/project-start.html
@@ -13,7 +13,7 @@ Have you already started work on the project?
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <form class="form" action="../routes/project-start-answer" method="post">
+    <form class="form" action="{{ nextUrl }}" method="post">
 
       <div class="govuk-form-group">
         <fieldset class="govuk-fieldset">
