--- a/app/views/current/views/water/public-money.html
+++ b/app/views/current/views/water/public-money.html
@@ -13,7 +13,7 @@ Meeting the remaining project costs
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <form class="form" action="../routes/public-money-answer" method="post">
+    <form class="form" action="{{ nextUrl }}" method="post">
 
       {% set remainingCosts = data['project-cost'] * 0.6 %}
 
