fixed all routing for slurry

--- a/app/views/current/views/slurry/applicant-details.html
+++ b/app/views/current/views/slurry/applicant-details.html
@@ -13,7 +13,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form class="form" action="check-answers-contact-details" method="post">
+      <form class="form" action="../slurry/check-answers-contact-details" method="post">
 
         <h1 class="govuk-heading-l">
           Applicant contact details
