--- a/app/views/current/views/slurry/check-answers-project-details-and-benefits.html
+++ b/app/views/current/views/slurry/check-answers-project-details-and-benefits.html
@@ -98,7 +98,7 @@ Check your answers
       </div>
     </dl>
 
-    <form action="task-list" method="post" novalidate>
+    <form action="../slurry/task-list" method="post" novalidate>
 
       <input type="hidden" name="answers-checked" value="true">
 
