--- a/app/views/current/views/slurry/grant.html
+++ b/app/views/current/views/slurry/grant.html
@@ -24,7 +24,7 @@ Potential grant funding
       The project is not guaranteed to receive a grant.
     </div>
 
-    <form class="form" action="remaining-costs" method="post">
+    <form class="form" action="../slurry/remaining-costs" method="post">
 
       <button class="govuk-button" data-module="govuk-button">Continue</button>
 
