--- a/app/views/current/views/slurry/new-business-condition.html
+++ b/app/views/current/views/slurry/new-business-condition.html
@@ -19,7 +19,7 @@
 
       <p>As a new business, to be considered eligible for a large countryside productivity grant scheme, you will need to provide additional evidence of your finances in your full application.</p>
 
-      <form class="form" action="applying" method="post">
+      <form class="form" action="../slurry/applying" method="post">
 
         <button class="govuk-button" data-module="govuk-button">Continue</button>
 
