--- a/app/views/current/views/slurry/planning-progress-condition.html
+++ b/app/views/current/views/slurry/planning-progress-condition.html
@@ -21,7 +21,7 @@
 
       <p>Find out if the project will have planning permission in the next six months. Planning applications can take years.</p>
 
-      <form class="form" action="abstraction-required" method="post">
+      <form class="form" action="../slurry/check-answers-check-you-can-apply" method="post">
 
         <button class="govuk-button" data-module="govuk-button">Continue</button>
 
