--- a/app/views/current/views/slurry/tenancy-length-condition.html
+++ b/app/views/current/views/slurry/tenancy-length-condition.html
@@ -19,7 +19,7 @@
 
       <p>You will need to extend your tenancy agreement before you can complete a full application.</p>
 
-      <form class="form" action="project-items" method="post">
+      <form class="form" action="../slurry/project-items" method="post">
 
         <button class="govuk-button" data-module="govuk-button">Continue</button>
 
