--- a/app/views/current/views/slurry/applying.html
+++ b/app/views/current/views/slurry/applying.html
@@ -13,7 +13,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form class="form" action="../routes/applying-answer" method="post">
+      <form class="form" action="../slurry/applying-answer" method="post">
 
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
