--- a/app/views/current/views/slurry/business.html
+++ b/app/views/current/views/slurry/business.html
@@ -13,7 +13,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form class="form" action="new-business" method="post">
+      <form class="form" action="../slurry/new-business" method="post">
 
         <h1 class="govuk-heading-l">
           Business details
