--- a/app/views/current/views/slurry/check-answers-contact-details.html
+++ b/app/views/current/views/slurry/check-answers-contact-details.html
@@ -214,7 +214,7 @@ Check your answers
       {% endif %}
     </dl>
 
-    <form action="task-list" method="post" novalidate>
+    <form action="../slurry/task-list" method="post" novalidate>
 
       <input type="hidden" name="answers-checked" value="true">
 
