--- a/app/views/current/views/slurry/environment.html
+++ b/app/views/current/views/slurry/environment.html
@@ -13,7 +13,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form class="form" action="check-answers-project-details-and-benefits" method="post">
+      <form class="form" action="../slurry/check-answers-project-details-and-benefits" method="post">
 
         <div class="govuk-form-group">
           <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="environment">
