--- a/app/views/current/views/slurry/new-business.html
+++ b/app/views/current/views/slurry/new-business.html
@@ -13,7 +13,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form class="form" action="../routes/business-answer" method="post">
+      <form class="form" action="../slurry/business-answer" method="post">
 
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" aria-describedby="new-business-hint">
