--- a/app/views/current/views/slurry/project-items.html
+++ b/app/views/current/views/slurry/project-items.html
@@ -13,7 +13,7 @@ Which items eligible for grant funding are included in the project?
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <form class="form" action="project-cost" method="post">
+    <form class="form" action="../slurry/project-cost" method="post">
 
       <div class="govuk-form-group">
         <fieldset class="govuk-fieldset" aria-describedby="project-items-hint">
